packages/typ/tests/fixtures/diagnostics/0967_mli_module_path_unary_overapplied_02.mli.infer.expected
File "0967_mli_module_path_unary_overapplied_02.mli", line 1:
Warning 24 [bad-module-name]: bad source file name: 0967_mli_module_path_unary_overapplied_02 is not a valid module name.

File "0967_mli_module_path_unary_overapplied_02.mli", line 5, characters 13-33:
5 | val x_beta : (int, bool) M_beta.t
                 ^^^^^^^^^^^^^^^^^^^^
Error: The type constructor M_beta.t expects 1 argument(s),
       but is here applied to 2 argument(s)
