packages/typ/tests/fixtures/diagnostics/0967_mli_module_path_unary_overapplied_02.mli
module M_beta : sig
  type 'a t
end

val x_beta : (int, bool) M_beta.t
